Fix overflow and padding for document view.

--- a/src/collaborative_platform/apps/vis_dashboard/assets/src/components/views/DocumentView/style.module.css
+++ b/src/collaborative_platform/apps/vis_dashboard/assets/src/components/views/DocumentView/style.module.css
@@ -1,5 +1,7 @@
 .documentView{
 	height: 100%;
+	overflow-y: auto;
+	padding: 15px 10px;
 }
 
 .overlayCanvas{
